tests/NormalTests/paczka1/fuzzy1/66182180.err
Error in line 1: dT4 S644 0,6
Error in line 13: SMjeW2 A140 69,3
Error in line 14: SMjeW2 S145 1,3
Error in line 23: arPv1Jq A74 -3,7
Error in line 2: 6j4WM S145 61,8
